--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
       <video autoplay playsinline class="video-player" id="user-2"></video>
     </div>
   </body>
+  <!-- <script type="module" src="/libs/agora-rtm-sdk-1.4.4.js"></script> -->
   <script type="module" src="/main.js"></script>
 </html>
