Add control icons

--- a/index.html
+++ b/index.html
@@ -12,7 +12,19 @@
       <video autoplay playsinline class="video-player" id="user-1"></video>
       <video autoplay playsinline class="video-player" id="user-2"></video>
     </div>
-  </body>
-  <!-- <script type="module" src="/libs/agora-rtm-sdk-1.4.4.js"></script> -->
+    <div id="controls">
+      <div class="control-container" id="camera-btn">
+        <img src="icons/camera.png" alt="">
+      </div>
+      <div class="control-container" id="mic-btn">
+        <img src="icons/mic.png" alt="">
+      </div>
+      <a href="lobby.html" class="invite-btn">        
+        <div class="control-container" id="leave-btn">
+          <img src="icons/phone.png" alt="">
+        </div>
+      </a>
+    </div>
+  </body>  
   <script type="module" src="/main.js"></script>
 </html>
